<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/first_of_a_few_steps_to_set_n_you_up_with_a_bank_account"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtPanCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/pan_number"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPan"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/background_button"
        android:hint="@string/pan_number"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/txtPanCard"
        app:layout_constraintTop_toBottomOf="@id/txtPanCard" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtDOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/birthdate"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPan" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tilDOBDate"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/background_button"
        android:gravity="center"
        android:hint="03"
        android:paddingStart="10dp"
        app:layout_constraintStart_toStartOf="@id/txtPanCard"
        app:layout_constraintTop_toBottomOf="@id/txtDOB" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tilDOBMonth"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/background_button"
        android:gravity="center"
        android:hint="11"
        android:paddingStart="10dp"
        app:layout_constraintStart_toEndOf="@id/tilDOBDate"
        app:layout_constraintTop_toBottomOf="@id/txtDOB" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tilDOBYear"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/background_button"
        android:gravity="center"
        android:hint="1997"
        android:paddingStart="10dp"
        app:layout_constraintStart_toEndOf="@id/tilDOBMonth"
        app:layout_constraintTop_toBottomOf="@id/txtDOB" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/gray"
        android:enabled="false"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/txtDoNotHavePan"
        app:layout_constraintEnd_toEndOf="@id/edtPan"
        app:layout_constraintStart_toStartOf="@id/edtPan" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtDoNotHavePan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:gravity="center"
        android:text="@string/i_don_t_have_a_pan"
        android:textColor="@color/purple_500"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/edtPan"
        app:layout_constraintStart_toStartOf="@+id/edtPan" />


</androidx.constraintlayout.widget.ConstraintLayout>